css/style.css
* {
box-sizing: border-box;
}

body {
  background-color: #d3d3d3;
  font-family: sans-serif;
  font-size: 10px;
}

.container {
  margin: 0 auto;
  width: 42rem;
}

nav {
  margin: 0 auto;
  padding: 10px 0 15px 15px;
  position: fixed;
  width: 42rem;
  background-color: #000000;
}

.restaurant-list {
  padding-top: 3rem;
  width: 42rem;
}

.location {
  width: 95%;
  border: 1%;
}

.content {
  padding: 10px 0 15px 15px;
}

.arrow {
  float: right;
}

